ghc-4335c07/testsuite/tests/typecheck/should_compile/tc066.hs
module ShouldSucceed where

data Pair a b = MkPair a b
f x = [ a | (MkPair c a) <- x ]
