ghc-4335c07/testsuite/tests/typecheck/should_fail/tcfail028.hs
-- !!! tests for ArityErr
module TcFail where

data A a b = B (A a)
